--- a/themes/metro/scss/_common.scss
+++ b/themes/metro/scss/_common.scss
@@ -2652,6 +2652,9 @@ form.append_fields_form .tblFooters {
 }
 
 #table_columns {
+  display: block;
+  overflow: auto;
+
   input {
     &[type="text"],
     &[type="password"],
