--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -2529,6 +2529,9 @@ input#auto_increment_opt {
 }
 
 #table_columns {
+  display: block;
+  overflow: auto;
+
   input {
     &[type=text],
     &[type=password],
